testsuite/poke.pkl/mul-diag-5.pk
/* { dg-do compile } */

var s = lambda void: {} /* { dg-error "invalid operand.*\n.*expected integral, offset or string" } */
        * 2;
